# Universal-Image-Utility-Tool

./: README.md  pyproject.toml
src/imgconvert/: __init__.py  __main__.py  batch.py  cli.py  conversion.py  exceptions.py  log_config.py  metadata.py  optimization.py  resizing.py  utils.py
tests/: conftest.py  test_batch.py  test_conversion.py  test_metadata.py  test_optimization.py  test_resizing.py  test_utils.py
