[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "imgconvert"
version = "0.1.0"
description = "Production-quality command-line image conversion utility."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ImgConvert Contributors" }]
keywords = ["image", "conversion", "pillow", "imagemagick", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = ["Pillow>=10.4"]

[project.optional-dependencies]
heic = ["pillow-heif>=0.16"]
avif = ["pillow-avif-plugin>=1.4"]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
imgconvert = "imgconvert.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/imgconvert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["imgconvert"]
